--- a/mr-moneybags/server/package.json
+++ b/mr-moneybags/server/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^3.6.2",
+    "@apollo/client": "^3.6.5",
     "express": "^4.18.1",
     "graphql": "^16.5.0",
     "mongoose": "^6.3.4"
