--- a/mr-moneybags/server/package.json
+++ b/mr-moneybags/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/client": "^3.6.5",
+    "bcrypt": "^5.0.1",
     "express": "^4.18.1",
     "graphql": "^16.5.0",
     "mongoose": "^6.3.4"
