--- a/mr-moneybags/client/package.json
+++ b/mr-moneybags/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "express": "^4.18.1",
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.3.4",
