--- a/mr-moneybags/server/package.json
+++ b/mr-moneybags/server/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/client": "^3.6.5",
+    "apollo-server-express": "^3.8.1",
     "bcrypt": "^5.0.1",
     "express": "^4.18.1",
     "graphql": "^16.5.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4"
   },
   "devDependencies": {
