--- a/mr-moneybags/package.json
+++ b/mr-moneybags/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "description": "",
   "main": "server/server.js",
-
   "scripts": {
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
@@ -15,5 +14,9 @@
   "license": "MIT",
   "devDependencies": {
     "concurrently": "^5.1.0"
+  },
+  "dependencies": {
+    "apollo-server-express": "^3.8.1",
+    "react": "^18.1.0"
   }
 }
