--- a/mr-moneybags/package.json
+++ b/mr-moneybags/package.json
@@ -22,6 +22,21 @@
     "graphql": "^16.5.0",
     "mongoose": "^6.3.4",
     "react": "^18.1.0",
-    "react-bootstrap": "^2.4.0"
+    "react-bootstrap": "^2.4.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4",
+    "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
+    "react-router": "^6.3.0",
+    "react-chartjs-2": "^4.1.0",
+    "chart.js": "^3.8.0",
+    "jquery": "^3.6.0",
+    "jwt-decode": "^3.1.2",
+    "ag-grid-community": "^27.3.0",
+    "ag-grid-react": "^27.3.0",
+    "@mui/material": "^5.8.2",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1"
   }
 }
