--- a/mr-moneybags/package.json
+++ b/mr-moneybags/package.json
@@ -17,26 +17,27 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.5",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.8.2",
+    "ag-grid-community": "^27.3.0",
+    "ag-grid-react": "^27.3.0",
     "bcrypt": "^5.0.1",
+    "bootstrap": "^5.1.3",
+    "chart.js": "^3.8.0",
     "express": "^4.18.1",
     "graphql": "^16.5.0",
+    "jquery": "^3.6.0",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^6.3.4",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
     "react-router": "^6.3.0",
-    "react-chartjs-2": "^4.1.0",
-    "chart.js": "^3.8.0",
-    "jquery": "^3.6.0",
-    "jwt-decode": "^3.1.2",
-    "ag-grid-community": "^27.3.0",
-    "ag-grid-react": "^27.3.0",
-    "@mui/material": "^5.8.2",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1"
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   }
 }
