--- a/mr-moneybags/package.json
+++ b/mr-moneybags/package.json
@@ -22,6 +22,7 @@
     "@mui/material": "^5.8.2",
     "ag-grid-community": "^27.3.0",
     "ag-grid-react": "^27.3.0",
+    "avataaars": "^2.0.0",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.8.0",
