--- a/mr-moneybags/client/package.json
+++ b/mr-moneybags/client/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@apollo/client": "^3.6.5",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "express": "^4.18.1",
@@ -17,7 +17,9 @@
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-chartjs-2": "^4.1.0",
+    "chart.js": "^3.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
