--- a/mr-moneybags/client/package.json
+++ b/mr-moneybags/client/package.json
@@ -8,6 +8,8 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "ag-grid-community": "^27.3.0",
+    "ag-grid-react": "^27.3.0",
     "axios": "^0.27.2",
     "express": "^4.18.1",
     "jwt-decode": "^3.1.2",
@@ -19,7 +21,8 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "react-chartjs-2": "^4.1.0",
-    "chart.js": "^3.8.0"
+    "chart.js": "^3.8.0",
+    "react-router": "^6.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
